[project]
name = "multi"
version = "0.1.0"
description = "multi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "multi.main:kickoff"
plot = "multi.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
